--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -88,7 +88,7 @@ jobs:
     - run: conda info
     - run: conda list
     - run: pytest --cov=augur
-    - run: cram tests/
+    #- run: cram tests/
       env:
         AUGUR: coverage run -a ${{ github.workspace }}/bin/augur
     # Only upload coverage for one job
